# embassy-temp-probe

./: Cargo.toml  README.md
.cargo/: config.toml
src/: i2c.rs  lm75b.rs  main.rs  p9813.rs
src/filter/: median.rs  mod.rs  movingavg.rs
