[package]
name = "embassy-temp-probe"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-executor = {version = "0.2", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "nightly", "integrated-timers", "arch-cortex-m", "executor-thread"]}
embassy-time = { version = "0.1", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "nightly", ] }
embassy-stm32 = { version = "0.1", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "nightly", "stm32f411re", "time-driver-tim5"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[[bin]]
name = "embassy-temp-probe"
test = false
bench = false