[package]
name = "embassy-temp-probe"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-executor = { version = "0.2", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "nightly",
    "integrated-timers",
    "arch-cortex-m",
    "executor-thread",
] }
embassy-time = { version = "0.1", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "nightly",
] }
embassy-stm32 = { version = "0.1", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "nightly",
    "stm32f411re",
    "time-driver-tim5",
] }
embassy-sync = { version = "0.2", git = "https://github.com/embassy-rs/embassy", features = [
] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.7.16", features = ["defmt", "defmt-impl"] }

[[bin]]
name = "embassy-temp-probe"
test = false
bench = false

[profile.release]
opt-level = 'z'
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations

[profile.dev.package."*"]
opt-level = "z"
